RESOLVED FIXED314151
REGRESSION (308320@main): x.com jumps to the wrong scroll offset when navigating back from a thread
https://bugs.webkit.org/show_bug.cgi?id=314151
Summary REGRESSION (308320@main): x.com jumps to the wrong scroll offset when navigat...
Simon Fraser (smfr)
Reported 2026-05-05 18:39:55 PDT
On x.com, scroll down a while, then tap on a xeet with replies, and scroll down in the replies. Now tap the back button; it will jump to the wrong location in the feed. Logging shows that x.com is calling window.scrollTo() with a y offset that's greater than the current maxY, before we've done the layout that resizes the content for the main feed page.
Attachments
Simon Fraser (smfr)
Comment 1 2026-05-05 18:40:08 PDT
Simon Fraser (smfr)
Comment 2 2026-05-05 18:50:28 PDT
EWS
Comment 3 2026-05-06 16:05:15 PDT
Committed 312749@main (26cd9a54b08c): <https://commits.webkit.org/312749@main> Reviewed commits have been landed. Closing PR #64321 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.