REGRESSION (308320@main): x.com jumps to the wrong scroll offset when navigating back from a thread https://bugs.webkit.org/show_bug.cgi?id=314151 rdar://175565114

Reviewed by Brent Fulgham.

When navigating back from a thread, x.com does a programmatic scroll to restore the
scroll position in the main feed. But it does this before the main feed has been fully
loaded (recall that `scrollTo` does a layout, so we know that layout is up to date),
so it's scrolling to a large y offset that is larger than the current scroll max.

The clamping added in 308320@main now clamps, breaking this behavior, so add a quirk
for x.com to restore the old behavior.

* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebCore/page/scrolling/AsyncScrollingCoordinator.cpp:
(WebCore::AsyncScrollingCoordinator::requestScrollToPosition):

Canonical link: https://commits.webkit.org/312749@main